tests/invalid_inputs/test09.bex
var x = new SharedArrayBuffer();

Thread t1 {
  x-I8[0] = 1;
}

Thread t2 {
  print(y-I8[0]);
}
